Pag de jogador favorito pronta

--- a/pj/site/client/pages/cadastro/cadastro.html
+++ b/pj/site/client/pages/cadastro/cadastro.html
@@ -75,13 +75,13 @@
         <div class="divFecha" onclick="mensagemFechar('.bannerVermelho')">X</div>
     </div>
     <div class="bannerVerde banner" style="z-index:3">
-        <div class="divMenssagem">FeedBack enviado com sucesso!</div>
+        <div class="divMenssagem">Cadastro realizado com sucesso!</div>
         <div class="divFecha" onclick="mensagemFechar('.bannerVerde')">X</div>
     </div>
 </body>
 </html>
+
 <script>
-    
     function cadastrar() {
 
 var nomeCompletoVar = iptNomeCompleto.value;
