--- a/pj/site/client/pages/login/login.html
+++ b/pj/site/client/pages/login/login.html
@@ -116,6 +116,7 @@
                     sessionStorage.ID_USUARIO = json.idUser;
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
+                    sessionStorage.FK_FAVORITO = json.fkJogador;
                     // sessionStorage.SENHA_USUARIO = json.senha;
                     // sessionStorage.ADM = json.administrador;
                     // sessionStorage.EMPRESA_USUARIO = json.fkEmpresa;
