--- a/pj/site/client/pages/pessoal/pessoal.html
+++ b/pj/site/client/pages/pessoal/pessoal.html
@@ -53,7 +53,7 @@
                     <button onclick="mudarSenha()" class="mudar">Mudar</button>
                 </div>
             </div>
-            <div  class="divForms">
+            <div class="divForms">
                 <div class="divTituloForm">
                     <label>Informações Pessoais</label>
                     <i class="bi bi-envelope-fill"></i>
@@ -67,6 +67,9 @@
                 </div>
             </div>
         </div>
+        <div id="diva" style="width: 80%;">
+            
+        </div>
         </div>
     </div>
 </body>
@@ -74,6 +77,7 @@
 </html>
 <script src="../menuLateral.js"></script>
 <script>
+
 function mudarSenha(){
     var senha = iptNovaSenha.value;
     var confSenha = iptConfNovaSenha.value;
