--- a/pj/site/client/pages/times/timeMasc.html
+++ b/pj/site/client/pages/times/timeMasc.html
@@ -36,10 +36,10 @@
     </nav>
     <div id="divOrdem">
         <h1>Ordenar por:</h1>
-        <button id="btnNome" class="botaoVerde" onclick="ordemJogadores('nomeJogador'), cor('#btnNome')">Nome</button>
+        <button id="btnNome" class="botaoBranco" onclick="ordemJogadores('nomeJogador'), cor('#btnNome')">Nome</button>
         <button id="btnCamisa" class="botaoBranco" onclick="ordemJogadores('numero'), cor('#btnCamisa')">Camisa</button>
         <button id="btnAltura" class="botaoBranco" onclick="ordemJogadores('altura'), cor('#btnAltura')">Altura</button>
-        <button id="btnPosicao" class="botaoBranco" onclick="ordemJogadores('idJogador'), cor('#btnPosicao')">Posicao</button>
+        <button id="btnPosicao" class="botaoVerde" onclick="ordemJogadores('idJogador'), cor('#btnPosicao')">Posicao</button>
     </div>
     <div id="divGeral"></div>
 </body>
