--- a/pj/site/client/pages/quiz/quiz1.html
+++ b/pj/site/client/pages/quiz/quiz1.html
@@ -54,7 +54,7 @@
             </div>
             <div id="pergunta2" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../../img/quiz/jogador-gabrielMenino.png">
+                <img src="../../img/quiz/jogador-menino.png">
                 <div>
                     <button onclick="quest2(0)">Patrick de Paula</button>
                     <button onclick="quest2(1)">Gabiel Menino</button>
@@ -81,7 +81,7 @@
             </div>
             <div id="pergunta5" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../../img/quiz/jogador-gustavoGomez.png">
+                <img src="../../img/quiz/jogador-gomez.png">
                 <div>
                     <button onclick="quest5(0)">Marcos Rocha</button>
                     <button onclick="quest5(0)">Luan</button>
@@ -90,7 +90,7 @@
             </div>
             <div id="pergunta6" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../../img/quiz/jogador-marcosRocha.png">
+                <img src="../../img/quiz/jogador-rocha.png">
                 <div>
                     <button onclick="quest6(0)">Mayke</button>
                     <button onclick="quest6(1)">Marcos Rocha</button>
@@ -126,7 +126,7 @@
             </div>
             <div id="pergunta10" class="divPergunta">
                 <h1>Qual o nome desse jogador?</h1>
-                <img src="../../img/quiz/jogador-zeRafael.png">
+                <img src="../../img/quiz/jogador-ze.png">
                 <div>
                     <button onclick="quest10(1)">Zé Rafael</button>
                     <button onclick="quest10(0)">Gabriel Menino</button>
