--- a/pj/site/client/pages/dados/dados.html
+++ b/pj/site/client/pages/dados/dados.html
@@ -116,10 +116,14 @@
                     resposta.json().then(json => {
                         console.log(json[0].contar)
                         vetorJogador.length = 0;
-                        for(var i = 0; i < json.length; i++){
+                        for(var i = 0; i < 11; i++){
                             vetorJogador.push(json[i].contar);
                         }
+                        for(var i = 11; i < 22; i++){
+                            vetorJogadora.push(json[i].contar);
+                        }
                         
+                        graphJogadora.update()
                         graphJogador.update()
                     });
 
