Dados gerais funcinando

--- a/pj/site/client/index.html
+++ b/pj/site/client/index.html
@@ -16,12 +16,11 @@
             <li><a class="aPalmeiras" href="../home/index.html">Palmeiras</a></li>
         </ul>
         <ul>
-            <li><a href="../historia/historia.html">Histórias</a></li>
+            <li><a href="pages/escudos/escudos.html">Escudos</a></li>
             <li><a href="pages/times/timeMasc.html">Time Masculino</a></li>
             <li><a href="pages/times/timeFemi.html">Time Feminino</a></li>
             <li><a href="pages/quiz/quiz.html">Quizzes</a></li>
             <li><a href="pages/titulos/titulos.html">Titulos</a></li>
-            <li><a href="pages/titulos/titulos.html">Feedback</a></li>
         </ul>
         <ul>
             <button class="btnBranco">
