--- a/pj/site/client/pages/escudos/escudos.html
+++ b/pj/site/client/pages/escudos/escudos.html
@@ -15,12 +15,11 @@
             <li><a class="aPalmeiras" href="../../index.html">Palmeiras</a></li>
         </ul>
         <ul>
-            <li><a href="../historia/historia.html">Histórias</a></li>
+            <li><a href="../escudos/escudos.html">Escudos</a></li>
             <li><a href="../times/timeMasc.html">Time Masculino</a></li>
             <li><a href="../times/timeFemi.html">Time Feminino</a></li>
             <li><a href="../quiz/quiz.html">Quizzes</a></li>
             <li><a href="../titulos/titulos.html">Titulos</a></li>
-            <li><a href="../titulos/titulos.html">Feedback</a></li>
         </ul>
         <ul>
             <button class="btnBranco">
