--- a/pj/site/client/pages/quiz/quiz.html
+++ b/pj/site/client/pages/quiz/quiz.html
@@ -16,19 +16,18 @@
             <li><a class="aPalmeiras" href="../../index.html">Palmeiras</a></li>
         </ul>
         <ul>
-            <li><a href="../historia/historia.html">Histórias</a></li>
+            <li><a href="../escudos/escudos.html">Escudos</a></li>
             <li><a href="../times/timeMasc.html">Time Masculino</a></li>
             <li><a href="../times/timeFemi.html">Time Feminino</a></li>
             <li><a href="../quiz/quiz.html">Quizzes</a></li>
             <li><a href="../titulos/titulos.html">Titulos</a></li>
-            <li><a href="../titulos/titulos.html">Feedback</a></li>
         </ul>
         <ul>
             <button class="btnBranco">
-                <a href="">Cadastro</a>
+                <a href="../cadastro/cadastro.html">Cadastro</a>
             </button>
             <button class="btnVerde">
-                <a href="">Login</a>
+                <a href="../login/login.html">Login</a>
             </button>
         </ul>
     </nav>    
